--- a/style.css
+++ b/style.css
@@ -77,7 +77,6 @@ button.selected {
     justify-content: center;  /* Horizontally center the items */
     padding: 10px;
     font-size: 16px;
-    background-color: #f9f9f9;
     border: 2px dashed #ccc;
     margin-bottom: 10px;
 }
@@ -106,7 +105,6 @@ button.selected {
     gap: 5px;
     padding: 10px;
     font-size: 16px;
-    background-color: #f9f9f9;
     border: 2px solid #ccc;
     border-radius: 4px;
     cursor: pointer; /* Makes the team clickable */
@@ -130,7 +128,6 @@ button.selected {
   .matchup[data-round="3"] .team:hover,
   .matchup[data-round="4"] .team:hover {
     background-color: #00c853; /* Green background on hover (for Rounds 2-4) */
-    color: white; /* White text on hover */
     border-color: #1b5e20; /* Darker green border */
   }
   
@@ -152,3 +149,11 @@ button.selected {
   .team-name {
     font-size: 16px;
   }
+
+.team.senators {
+    background-color: #c62331;
+}
+
+.team.maple-leafs {
+    background-color: #304f85;
+}
